apispec/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio
  template:
    metadata:
      labels:
        app: apicurio
    spec:
      containers:
        - name: apicurio
          image: apicurio/apicurio-studio:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
