apispec/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-db
  namespace: argocd
spec:
  selector:
    app: apicurio-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
