apispec/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio
  namespace: argocd
spec:
  to:
    kind: Service
    name: apicurio
  port:
    targetPort: 8080
  tls:
    termination: edge
